tests/ui/closures/2229_closure_analysis/issue-118144.stderr
error[E0308]: mismatched types
  --> $DIR/issue-118144.rs:11:9
   |
LL |         V(x) = func_arg;
   |         ^^^^   -------- this expression has type `&mut V`
   |         |
   |         expected `&mut V`, found `V`
   |
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |         V(x) = &*func_arg;
   |                ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
